removed configs; added tests directory; updated .gitignore
Former-commit-id: ac5cd81c9b3d1790891ed9a83694530ef4a992c3

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
 #tmp folder for saving
 tmp/
+tests/output/
+tests/configs/config_hex_a_mask.txt
+tests/configs/config_hex_a_plot.txt
+tests/configs/config_hex_a_padf.txt
+tests/configs/config_hexdc_a_mask.txt
+tests/configs/config_hexdc_a_plot.txt
+tests/configs/config_hexdc_a_padf.txt
+tests/configs/hexagon_shifted.pdb
 
 #pycache and cython files
 __pycache__/
