commit runtime error comment
Former-commit-id: ac2a94ff74c81fd037370a6479f461d1afde469b

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ tests/configs/config_hexdc_a_plot.txt
 tests/configs/config_hexdc_a_padf.txt
 tests/configs/hexagon_shifted.pdb
 
+
+demo/output/
+
 #pycache and cython files
 __pycache__/
 *.pyc
