renamed tests folder to demo folder
Former-commit-id: f61bd69c87e146102300c99efacbe376a132bfce

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,8 @@
 #tmp folder for saving
 tmp/
-tests/output/
-tests/configs/config_hex_a_mask.txt
-tests/configs/config_hex_a_plot.txt
-tests/configs/config_hex_a_padf.txt
-tests/configs/config_hexdc_a_mask.txt
-tests/configs/config_hexdc_a_plot.txt
-tests/configs/config_hexdc_a_padf.txt
-tests/configs/hexagon_shifted.pdb
-
-
 demo/output/
+demo/configs/generated_configs/
+demo/configs/hexagon_shifted.pdb
 
 #pycache and cython files
 __pycache__/
